rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x701_1997_SMASE-A-ASSOCIATE-Information.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x701_1997_SMASE-A-ASSOCIATE-Information.asn1
---
Warnings:
Unidentified generating bindings for : Unexpectedly encountered unlinked struct-like ASN1 value!


Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod smase_a_associate_information {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct FunctionalUnitPackageId(pub ObjectIdentifier);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct Reason(pub Integer);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct SMASEUserData {
        #[rasn(identifier = "smfuPackages")]
        pub smfu_packages: Option<SetOf<FunctionalUnitPackage>>,
        pub reason: Option<Reason>,
        #[rasn(identifier = "systemsManagementUserInformation")]
        pub systems_management_user_information: Option<GraphicString>,
    }
    impl SMASEUserData {
        pub fn new(
            smfu_packages: Option<SetOf<FunctionalUnitPackage>>,
            reason: Option<Reason>,
            systems_management_user_information: Option<GraphicString>,
        ) -> Self {
            Self {
                smfu_packages,
                reason,
                systems_management_user_information,
            }
        }
    }
}
