rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x711_1997_CMIP-A-ABORT-Information.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x711_1997_CMIP-A-ABORT-Information.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod cmip_a_abort_information {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[doc = "\tInformation carried in user-information parameter of A-ABORT"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct CMIPAbortInfo {
        #[rasn(tag(context, 0), identifier = "abortSource")]
        pub abort_source: CMIPAbortSource,
        #[rasn(tag(context, 1), identifier = "userInfo")]
        pub user_info: Option<Any>,
    }
    impl CMIPAbortInfo {
        pub fn new(abort_source: CMIPAbortSource, user_info: Option<Any>) -> Self {
            Self {
                abort_source,
                user_info,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum CMIPAbortSource {
        cmiseServiceUser = 0,
        cmiseServiceProvider = 1,
    }
}
