rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x711_1997_CMIP-A-ASSOCIATE-Information.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x711_1997_CMIP-A-ASSOCIATE-Information.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod cmip_a_associate_information {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[doc = "\tFunctional unit i is supported if and only if bit i is one"]
    #[doc = "\tInformation carried in user-information parameter of A-ASSOCIATE"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct CMIPUserInfo {
        #[rasn(
            tag(context, 0),
            default = "cmipuser_info_protocol_version_default",
            identifier = "protocolVersion"
        )]
        pub protocol_version: ProtocolVersion,
        #[rasn(
            tag(context, 1),
            default = "cmipuser_info_functional_units_default",
            identifier = "functionalUnits"
        )]
        pub functional_units: FunctionalUnits,
        #[rasn(tag(context, 2), identifier = "accessControl")]
        pub access_control: Option<Any>,
        #[rasn(tag(context, 3), identifier = "userInfo")]
        pub user_info: Option<Any>,
    }
    impl CMIPUserInfo {
        pub fn new(
            protocol_version: ProtocolVersion,
            functional_units: FunctionalUnits,
            access_control: Option<Any>,
            user_info: Option<Any>,
        ) -> Self {
            Self {
                protocol_version,
                functional_units,
                access_control,
                user_info,
            }
        }
    }
    fn cmipuser_info_protocol_version_default() -> ProtocolVersion {
        ProtocolVersion([true, false].into_iter().collect())
    }
    fn cmipuser_info_functional_units_default() -> FunctionalUnits {
        FunctionalUnits([false, false, false, false, false].into_iter().collect())
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct FunctionalUnits(pub BitString);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct ProtocolVersion(pub BitString);
}
