rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x721_1992_ManagedObjectClassesDefinitions.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x721_1992_ManagedObjectClassesDefinitions.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod managed_object_classes_definitions {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[doc = "EXPORTS everything"]
    pub static SMI2_MOBJECT_CLASS: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 3u32, 2u32, 3u32]).to_owned());
    pub static SMI2_NAME_BINDING: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 3u32, 2u32, 6u32]).to_owned());
    pub static SMI2_PACKAGE: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 3u32, 2u32, 4u32]).to_owned());
}
