rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x721_1992_Notification-ASN1Module.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x721_1992_Notification-ASN1Module.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod notification_asn1_module {
    extern crate alloc;
    use super::attribute_asn1_module::{
        AdditionalInformation, AdditionalText, AttributeIdentifierList, AttributeList,
        AttributeValueChangeDefinition, BackedUpStatus, CorrelatedNotifications,
        MonitoredAttributes, NotificationIdentifier, PerceivedSeverity, ProbableCause,
        ProposedRepairActions, SecurityAlarmCause, SecurityAlarmDetector, SecurityAlarmSeverity,
        ServiceProvider, ServiceUser, SourceIndicator, SpecificProblems, ThresholdInfo,
        TrendIndication,
    };
    use super::cmip_1::{AttributeId, ObjectClass, ObjectInstance};
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct AlarmInfo {
        #[rasn(identifier = "probableCause")]
        pub probable_cause: ProbableCause,
        #[rasn(tag(context, 1), identifier = "specificProblems")]
        pub specific_problems: Option<SpecificProblems>,
        #[rasn(identifier = "perceivedSeverity")]
        pub perceived_severity: PerceivedSeverity,
        #[rasn(identifier = "backedUpStatus")]
        pub backed_up_status: Option<BackedUpStatus>,
        #[rasn(tag(context, 2), identifier = "backUpObject")]
        pub back_up_object: Option<ObjectInstance>,
        #[rasn(tag(context, 3), identifier = "trendIndication")]
        pub trend_indication: Option<TrendIndication>,
        #[rasn(tag(context, 4), identifier = "thresholdInfo")]
        pub threshold_info: Option<ThresholdInfo>,
        #[rasn(tag(context, 5), identifier = "notificationIdentifier")]
        pub notification_identifier: Option<NotificationIdentifier>,
        #[rasn(tag(context, 6), identifier = "correlatedNotifications")]
        pub correlated_notifications: Option<CorrelatedNotifications>,
        #[rasn(tag(context, 7), identifier = "stateChangeDefinition")]
        pub state_change_definition: Option<AttributeValueChangeDefinition>,
        #[rasn(tag(context, 8), identifier = "monitoredAttributes")]
        pub monitored_attributes: Option<MonitoredAttributes>,
        #[rasn(tag(context, 9), identifier = "proposedRepairActions")]
        pub proposed_repair_actions: Option<ProposedRepairActions>,
        #[rasn(identifier = "additionalText")]
        pub additional_text: Option<AdditionalText>,
        #[rasn(tag(context, 10), identifier = "additionalInformation")]
        pub additional_information: Option<AdditionalInformation>,
    }
    impl AlarmInfo {
        pub fn new(
            probable_cause: ProbableCause,
            specific_problems: Option<SpecificProblems>,
            perceived_severity: PerceivedSeverity,
            backed_up_status: Option<BackedUpStatus>,
            back_up_object: Option<ObjectInstance>,
            trend_indication: Option<TrendIndication>,
            threshold_info: Option<ThresholdInfo>,
            notification_identifier: Option<NotificationIdentifier>,
            correlated_notifications: Option<CorrelatedNotifications>,
            state_change_definition: Option<AttributeValueChangeDefinition>,
            monitored_attributes: Option<MonitoredAttributes>,
            proposed_repair_actions: Option<ProposedRepairActions>,
            additional_text: Option<AdditionalText>,
            additional_information: Option<AdditionalInformation>,
        ) -> Self {
            Self {
                probable_cause,
                specific_problems,
                perceived_severity,
                backed_up_status,
                back_up_object,
                trend_indication,
                threshold_info,
                notification_identifier,
                correlated_notifications,
                state_change_definition,
                monitored_attributes,
                proposed_repair_actions,
                additional_text,
                additional_information,
            }
        }
    }
    #[doc = " backUpObject attribute\tbackedUpStatus\tbackUpObject\tbackUpObject attribute"]
    #[doc = " (except in log record\tcomponent\tcomponent\tin log record"]
    #[doc = "=============================================================================================================================="]
    #[doc = " ObjectInstance\tT\tObjectInstance\tObjectInstance"]
    #[doc = " NULL\tF\t< absent >\t< absent >"]
    #[doc = " < absent >\t< absent >\t< absent >\t< absent >"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct AttributeValueChangeInfo {
        #[rasn(identifier = "sourceIndicator")]
        pub source_indicator: Option<SourceIndicator>,
        #[rasn(tag(context, 1), identifier = "attributeIdentifierList")]
        pub attribute_identifier_list: Option<AttributeIdentifierList>,
        #[rasn(identifier = "attributeValueChangeDefinition")]
        pub attribute_value_change_definition: AttributeValueChangeDefinition,
        #[rasn(identifier = "notificationIdentifier")]
        pub notification_identifier: Option<NotificationIdentifier>,
        #[rasn(tag(context, 2), identifier = "correlatedNotifications")]
        pub correlated_notifications: Option<CorrelatedNotifications>,
        #[rasn(identifier = "additionalText")]
        pub additional_text: Option<AdditionalText>,
        #[rasn(tag(context, 3), identifier = "additionalInformation")]
        pub additional_information: Option<AdditionalInformation>,
    }
    impl AttributeValueChangeInfo {
        pub fn new(
            source_indicator: Option<SourceIndicator>,
            attribute_identifier_list: Option<AttributeIdentifierList>,
            attribute_value_change_definition: AttributeValueChangeDefinition,
            notification_identifier: Option<NotificationIdentifier>,
            correlated_notifications: Option<CorrelatedNotifications>,
            additional_text: Option<AdditionalText>,
            additional_information: Option<AdditionalInformation>,
        ) -> Self {
            Self {
                source_indicator,
                attribute_identifier_list,
                attribute_value_change_definition,
                notification_identifier,
                correlated_notifications,
                additional_text,
                additional_information,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct ObjectInfo {
        #[rasn(identifier = "sourceIndicator")]
        pub source_indicator: Option<SourceIndicator>,
        #[rasn(identifier = "attributeList")]
        pub attribute_list: Option<AttributeList>,
        #[rasn(identifier = "notificationIdentifier")]
        pub notification_identifier: Option<NotificationIdentifier>,
        #[rasn(tag(context, 1), identifier = "correlatedNotifications")]
        pub correlated_notifications: Option<CorrelatedNotifications>,
        #[rasn(identifier = "additionalText")]
        pub additional_text: Option<AdditionalText>,
        #[rasn(tag(context, 2), identifier = "additionalInformation")]
        pub additional_information: Option<AdditionalInformation>,
    }
    impl ObjectInfo {
        pub fn new(
            source_indicator: Option<SourceIndicator>,
            attribute_list: Option<AttributeList>,
            notification_identifier: Option<NotificationIdentifier>,
            correlated_notifications: Option<CorrelatedNotifications>,
            additional_text: Option<AdditionalText>,
            additional_information: Option<AdditionalInformation>,
        ) -> Self {
            Self {
                source_indicator,
                attribute_list,
                notification_identifier,
                correlated_notifications,
                additional_text,
                additional_information,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct RelationshipChangeInfo {
        #[rasn(identifier = "sourceIndicator")]
        pub source_indicator: Option<SourceIndicator>,
        #[rasn(tag(context, 1), identifier = "attributeIdentifierList")]
        pub attribute_identifier_list: Option<AttributeIdentifierList>,
        #[rasn(identifier = "relationshipChangeDefinition")]
        pub relationship_change_definition: AttributeValueChangeDefinition,
        #[rasn(identifier = "notificationIdentifier")]
        pub notification_identifier: Option<NotificationIdentifier>,
        #[rasn(tag(context, 2), identifier = "correlatedNotifications")]
        pub correlated_notifications: Option<CorrelatedNotifications>,
        #[rasn(identifier = "additionalText")]
        pub additional_text: Option<AdditionalText>,
        #[rasn(tag(context, 3), identifier = "additionalInformation")]
        pub additional_information: Option<AdditionalInformation>,
    }
    impl RelationshipChangeInfo {
        pub fn new(
            source_indicator: Option<SourceIndicator>,
            attribute_identifier_list: Option<AttributeIdentifierList>,
            relationship_change_definition: AttributeValueChangeDefinition,
            notification_identifier: Option<NotificationIdentifier>,
            correlated_notifications: Option<CorrelatedNotifications>,
            additional_text: Option<AdditionalText>,
            additional_information: Option<AdditionalInformation>,
        ) -> Self {
            Self {
                source_indicator,
                attribute_identifier_list,
                relationship_change_definition,
                notification_identifier,
                correlated_notifications,
                additional_text,
                additional_information,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct SecurityAlarmInfo {
        #[rasn(identifier = "securityAlarmCause")]
        pub security_alarm_cause: SecurityAlarmCause,
        #[rasn(identifier = "securityAlarmSeverity")]
        pub security_alarm_severity: SecurityAlarmSeverity,
        #[rasn(identifier = "securityAlarmDetector")]
        pub security_alarm_detector: SecurityAlarmDetector,
        #[rasn(identifier = "serviceUser")]
        pub service_user: ServiceUser,
        #[rasn(identifier = "serviceProvider")]
        pub service_provider: ServiceProvider,
        #[rasn(identifier = "notificationIdentifier")]
        pub notification_identifier: Option<NotificationIdentifier>,
        #[rasn(tag(context, 1), identifier = "correlatedNotifications")]
        pub correlated_notifications: Option<CorrelatedNotifications>,
        #[rasn(identifier = "additionalText")]
        pub additional_text: Option<AdditionalText>,
        #[rasn(tag(context, 2), identifier = "additionalInformation")]
        pub additional_information: Option<AdditionalInformation>,
    }
    impl SecurityAlarmInfo {
        pub fn new(
            security_alarm_cause: SecurityAlarmCause,
            security_alarm_severity: SecurityAlarmSeverity,
            security_alarm_detector: SecurityAlarmDetector,
            service_user: ServiceUser,
            service_provider: ServiceProvider,
            notification_identifier: Option<NotificationIdentifier>,
            correlated_notifications: Option<CorrelatedNotifications>,
            additional_text: Option<AdditionalText>,
            additional_information: Option<AdditionalInformation>,
        ) -> Self {
            Self {
                security_alarm_cause,
                security_alarm_severity,
                security_alarm_detector,
                service_user,
                service_provider,
                notification_identifier,
                correlated_notifications,
                additional_text,
                additional_information,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct StateChangeInfo {
        #[rasn(identifier = "sourceIndicator")]
        pub source_indicator: Option<SourceIndicator>,
        #[rasn(tag(context, 1), identifier = "attributeIdentifierList")]
        pub attribute_identifier_list: Option<AttributeIdentifierList>,
        #[rasn(identifier = "stateChangeDefinition")]
        pub state_change_definition: AttributeValueChangeDefinition,
        #[rasn(identifier = "notificationIdentifier")]
        pub notification_identifier: Option<NotificationIdentifier>,
        #[rasn(tag(context, 2), identifier = "correlatedNotifications")]
        pub correlated_notifications: Option<CorrelatedNotifications>,
        #[rasn(identifier = "additionalText")]
        pub additional_text: Option<AdditionalText>,
        #[rasn(tag(context, 3), identifier = "additionalInformation")]
        pub additional_information: Option<AdditionalInformation>,
    }
    impl StateChangeInfo {
        pub fn new(
            source_indicator: Option<SourceIndicator>,
            attribute_identifier_list: Option<AttributeIdentifierList>,
            state_change_definition: AttributeValueChangeDefinition,
            notification_identifier: Option<NotificationIdentifier>,
            correlated_notifications: Option<CorrelatedNotifications>,
            additional_text: Option<AdditionalText>,
            additional_information: Option<AdditionalInformation>,
        ) -> Self {
            Self {
                source_indicator,
                attribute_identifier_list,
                state_change_definition,
                notification_identifier,
                correlated_notifications,
                additional_text,
                additional_information,
            }
        }
    }
    #[doc = "EXPORTS everything"]
    pub static SMI2_NOTIFICATION: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 3u32, 2u32, 10u32]).to_owned());
}
