rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x722_1992_ActionModule.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x722_1992_ActionModule.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod action_module {
    extern crate alloc;
    use super::attribute_asn1_module::{ManagementExtension, OperationalState};
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct ActivateReply {
        #[rasn(tag(context, 0), identifier = "operationalStatus")]
        pub operational_status: OperationalState,
        #[rasn(tag(context, 1), identifier = "responseCode")]
        pub response_code: Integer,
        #[rasn(tag(context, 2), identifier = "responseParams")]
        pub response_params: Option<SetOf<ManagementExtension>>,
    }
    impl ActivateReply {
        pub fn new(
            operational_status: OperationalState,
            response_code: Integer,
            response_params: Option<SetOf<ManagementExtension>>,
        ) -> Self {
            Self {
                operational_status,
                response_code,
                response_params,
            }
        }
    }
}
